fix: eventos touch

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ html, body {
     top: 0; left: 0; right: 0; bottom: 0; 
     z-index: 1; 
     overflow: hidden; 
+    touch-action: none;
 }
 
 #canvas-container canvas {
