--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,8 @@ html, body {
 }
 
 /* Ocultar el tooltip de hover en dispositivos con pantalla táctil */
-@media (pointer: coarse) {
+/* @media (pointer: coarse) {
     #hover-tooltip {
         display: none !important;
     }
-}
+} */
